applications/project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: project
  name: todo-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: todo-app

  template:
    metadata:
      labels:
        app: todo-app

    spec:
      volumes:
        - name: project-storage
          persistentVolumeClaim:
            claimName: shared-log-claim

      containers:
        - name: todo-app
          image: PROJECT/TODO_APP
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          volumeMounts:
            - name: project-storage
              mountPath: /usr/src/app/files
